@startuml
title command substate

' states
Follow: maintain distance from the person
Forward : move forward
Left : move left
Right : move right
Back : move back

' relationships
[*] --> Follow
Follow -u-> Left : gesture=swipe_left
Follow -u-> Right : gesture=swipe_right
Follow -d-> Back : gesture=swipe_up
Follow -d-> Forward : gesture=swipe_down
Left --> Follow : gesture=fist
Right --> Follow : gesture=fist
Back --> Follow : gesture=fist
Forward --> Follow : gesture=fist
@enduml